kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__if_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 79
expression: "crate::tests::parsing_expr_string(r#\"1 if\"#)"
---
Node {
    node: If(
        IfExpr {
            body: Node {
                node: NumberLit(
                    NumberLit {
                        binary_suffix: None,
                        value: Int(
                            1,
                        ),
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            cond: Node {
                node: Missing(
                    MissingExpr,
                ),
                filename: "",
                line: 1,
                column: 2,
                end_line: 1,
                end_column: 4,
            },
            orelse: Node {
                node: Missing(
                    MissingExpr,
                ),
                filename: "",
                line: 1,
                column: 2,
                end_line: 1,
                end_column: 4,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 2,
    end_line: 1,
    end_column: 4,
}

