kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__if_stmt_recovery_2.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"if : a = 1\"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: "",
    name: "",
    body: [
        Node {
            node: If(
                IfStmt {
                    body: [
                        Node {
                            node: Assign(
                                AssignStmt {
                                    targets: [
                                        Node {
                                            node: Identifier {
                                                names: [
                                                    Node {
                                                        node: "a",
                                                        filename: "",
                                                        line: 1,
                                                        column: 5,
                                                        end_line: 1,
                                                        end_column: 6,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Store,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 5,
                                            end_line: 1,
                                            end_column: 6,
                                        },
                                    ],
                                    value: Node {
                                        node: NumberLit(
                                            NumberLit {
                                                binary_suffix: None,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 9,
                                        end_line: 1,
                                        end_column: 10,
                                    },
                                    type_annotation: None,
                                    ty: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 5,
                            end_line: 1,
                            end_column: 10,
                        },
                    ],
                    cond: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 3,
                        end_line: 1,
                        end_column: 4,
                    },
                    orelse: [],
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 10,
        },
    ],
    comments: [],
}

